Fix Java deprecations